<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Principal</string>
    <string name="menu_services">Serviços</string>
    <string name="menu_clients">Clientes</string>
    <string name="menu_contact">Contato</string>
    <string name="menu_about">Sobre</string>
    <string name="item_contact">Entrar em contato</string>
    <string name="name_atm">ATM Consultoria</string>
    <string name="contact_atm">atmconsultoria@gmail.com</string>

    <string name="services_t1">Sistema de gestão de qualidade</string>
    <string name="services_t2">Indicadores de desempenho</string>

    <string name="clients_t1">Clientes</string>
    <string name="clients_content">Em mais de 15 anos de existência,
        a ATM acumula experiência em serviços de consultoria para empresas nacionais e multinacionais de diversos portes,
        atendendo mais de 1000 empresas desde a sua abertura.</string>
    
    <string name="cielo">Cielo</string>
    <string name="braskem">Braskem</string>
    <string name="gerdau">Gerdau</string>
    <string name="embraer">Embraer</string>
    <string name="natura">Natura</string>
    <string name="americanas">Lojas Americanas</string>

    <string name="example_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Proin vel ex et massa lobortis mattis. Donec eu nunc tempor, vulputate mi sit amet, suscipit tortor.
        Morbi dignissim ultrices imperdiet. Donec tincidunt velit quis tristique venenatis.
        Maecenas sagittis tincidunt erat quis porta. Mauris sed lobortis ex.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
