<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="dominando.android.navigationdrawer.ui.home.MainFragment"
        android:label="@string/menu_home" />

    <fragment
        android:id="@+id/nav_services"
        android:name="dominando.android.navigationdrawer.ui.services.ServicesFragment"
        android:label="@string/menu_services" />

    <fragment
        android:id="@+id/nav_clients"
        android:name="dominando.android.navigationdrawer.ui.clients.ClientsFragment"
        android:label="@string/menu_clients" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="dominando.android.navigationdrawer.ui.contact.ContactFragment"
        android:label="@string/menu_contact" />

    <fragment
        android:id="@+id/nav_about"
        android:name="dominando.android.navigationdrawer.ui.about.AboutFragment"
        android:label="@string/menu_about" />

</navigation>