<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/clients_t1"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/clients_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <TextView
        android:id="@+id/cielo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:drawableStart="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:text="@string/cielo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textContent"
        app:layout_constraintTop_toBottomOf="@+id/textContent" />

    <TextView
        android:id="@+id/braskem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:text="@string/braskem"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/cielo"
        app:layout_constraintTop_toBottomOf="@+id/cielo" />

    <TextView
        android:id="@+id/gerdau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:text="@string/gerdau"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/braskem"
        app:layout_constraintTop_toBottomOf="@+id/braskem" />

    <TextView
        android:id="@+id/embraer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:text="@string/embraer"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/gerdau"
        app:layout_constraintTop_toBottomOf="@+id/gerdau" />

    <TextView
        android:id="@+id/natura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:text="@string/natura"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/embraer"
        app:layout_constraintTop_toBottomOf="@+id/embraer" />

    <TextView
        android:id="@+id/americanas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:drawableStart="@drawable/ic_arrow"
        android:gravity="center_vertical"
        android:text="@string/americanas"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/natura"
        app:layout_constraintTop_toBottomOf="@+id/natura" />

</androidx.constraintlayout.widget.ConstraintLayout>